--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".Register" />
         <activity android:name=".Login" />
+        <activity android:name=".AfterLogin" />
 
     </application>
 
