Changed JSON Tree Structure of Database and Setup Data fetch from Firebase Realtime Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".Register" />
         <activity android:name=".Login" />
         <activity android:name=".AfterLogin" />
-
+        <activity android:name=".ShowItem" />
     </application>
 
 </manifest>
